--- a/package.json
+++ b/package.json
@@ -14,15 +14,34 @@
     "url": "https://github.com/overlookmotel/react-async-ssr/issues"
   },
   "dependencies": {
+    "react-dom": "^16.7.0"
+  },
+  "peerDependencies": {
+    "react": "^16.7.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@overlookmotel/eslint-config": "^1.1.0",
+    "@overlookmotel/eslint-config-react": "^1.0.0",
+    "@overlookmotel/eslint-config-tests": "^1.0.2",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "eslint": "^5.12.1",
     "eslint-plugin-chai-friendly": "^0.4.1",
+    "eslint-plugin-eslint-comments": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "istanbul": "^0.4.5",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "sinon": "^7.2.3",
+    "sinon-chai": "^3.3.0",
+    "source-map-support": "^0.5.10"
   },
   "keywords": [
     "react",
@@ -34,13 +53,19 @@
     "async"
   ],
   "scripts": {
+    "build": "rm -rf test/* && npm run build-only",
+    "build-only": "babel src --out-dir .",
     "test": "npm run lint && npm run test-main",
-    "lint": "eslint \"**/*.js\" --ext .js",
-    "test-main": "mocha --check-leaks --colors -t 1000 -R spec \"test/**/*.test.js\"",
+    "lint": "eslint *.js .*.js lib/** src/** --ext .js",
+    "lint-fix": "eslint *.js .*.js lib/** src/** --ext .js --fix",
+    "test-main": "npm run build && npm run test-only && npm run test-only-prod",
+    "test-only": "cross-env NODE_ENV=development mocha --require source-map-support/register --check-leaks --colors -t 1000 -R spec 'test/**/*.test.js'",
+    "test-only-prod": "cross-env NODE_ENV=production mocha --require source-map-support/register --check-leaks --colors -t 1000 -R spec 'test/**/*.test.js'",
     "cover": "npm run cover-main && rm -rf coverage",
     "coveralls": "npm run cover-main && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
-    "cover-main": "cross-env COVERAGE=true istanbul cover _mocha --report lcovonly -- -t 1000 -R spec \"test/**/*.test.js\"",
-    "travis": "if [ $COVERAGE ]; then npm run coveralls; else npm test; fi"
+    "cover-main": "npm run build && npm run cover-only",
+    "cover-only": "cross-env COVERAGE=true istanbul cover _mocha --report lcovonly -- -t 1000 -R spec 'test/**/*.test.js'",
+    "ci": "if [ $COVERAGE ]; then npm run coveralls; else npm test; fi"
   },
   "engines": {
     "node": ">=6"
