Tests: Replace `mocha` with `jest`
Closes #3.

--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,11 @@
 test
 coverage
 .editorconfig
+.gitattributes
 .gitignore
 .eslintignore
 .eslintrc.js
 .npmignore
 .travis.yml
+jest.config.js
 npm-debug.log
