--- a/package.json
+++ b/package.json
@@ -24,23 +24,19 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@overlookmotel/eslint-config": "^1.1.0",
+    "@overlookmotel/eslint-config-jest": "^1.0.0",
     "@overlookmotel/eslint-config-react": "^1.0.0",
-    "@overlookmotel/eslint-config-tests": "^1.0.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "eslint": "^5.12.1",
-    "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-eslint-comments": "^3.0.1",
+    "eslint-plugin-jest": "^22.1.3",
     "eslint-plugin-react": "^7.12.4",
     "jest": "^23.6.0",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "sinon": "^7.2.3",
-    "sinon-chai": "^3.3.0"
+    "react": "^16.7.0"
   },
   "keywords": [
     "react",
