--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "https://github.com/overlookmotel/react-async-ssr/issues"
   },
   "dependencies": {
+    "async": "^2.6.1",
     "react-dom": "^16.7.0"
   },
   "peerDependencies": {
