--- a/package.json
+++ b/package.json
@@ -20,22 +20,26 @@
     "react": "^16.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
-    "@overlookmotel/eslint-config": "^1.1.0",
-    "@overlookmotel/eslint-config-jest": "^1.0.0",
-    "@overlookmotel/eslint-config-react": "^1.0.0",
+    "@overlookmotel/eslint-config": "^2.0.0",
+    "@overlookmotel/eslint-config-jest": "^1.0.2",
+    "@overlookmotel/eslint-config-react": "^2.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "coveralls": "^3.0.2",
+    "coveralls": "^3.0.3",
     "cross-env": "^5.2.0",
-    "eslint": "^5.12.1",
-    "eslint-plugin-eslint-comments": "^3.0.1",
-    "eslint-plugin-jest": "^22.1.3",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-eslint-comments": "^3.1.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "jest": "^23.6.0",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.7.2",
     "react": "^16.6.0"
   },
   "keywords": [
