--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "jest": "^23.6.0",
+    "jest-each-object": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.6.0"
   },
