--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@overlookmotel/eslint-config-react": "^2.0.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "cheerio": "^1.0.0-rc.3",
     "coveralls": "^3.0.3",
     "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
@@ -38,8 +39,10 @@
     "eslint-plugin-jest": "^22.6.4",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
+    "fs-extra": "^8.0.1",
     "jest": "^23.6.0",
     "jest-each-object": "^1.0.0",
+    "jsdom": "^15.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.6.0"
   },
