--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "url": "https://github.com/overlookmotel/react-async-ssr/issues"
   },
   "dependencies": {
-    "react-dom": "^16.12.0"
+    "react-dom": "~16.9.0"
   },
   "peerDependencies": {
-    "react": "16.6.0 - 16.9.x || ^16.11.0"
+    "react": "16.6.0 - 16.9.x"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
@@ -46,7 +46,7 @@
     "jest-each-object": "^1.0.0",
     "jsdom": "^15.2.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0"
+    "react": "~16.9.0"
   },
   "keywords": [
     "react",
