--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "url": "https://github.com/overlookmotel/react-async-ssr/issues"
   },
   "dependencies": {
+    "is-class-component": "^1.1.1",
+    "is-it-type": "^3.1.1",
+    "is-promise": "^2.1.0",
+    "lodash": "^4.17.15",
     "react-dom": "~16.9.0"
   },
   "peerDependencies": {
